# sell-it

./: .gitignore  DebugVisualizer.py  FrechetEvaluation.py  HagglingDataset.py  JointsDataset.py  MannDataLoaderTest.py  MannDataTest.py  MannDataset.py  Metrics.py  PSSevaluation.py  TrainTestSplit.py  bad_files.txt  debugVisualizer.py  format.md  preprocess.py  readme.md  test.py  testing_files.json  train.py  trainFrechet.py
Motion/: Animation.py  AnimationStructure.py  BVH.py  InverseKinematics.py  Pivots.py
debug/: 0.json  1.json  2.json  3.json  4.json
haggling_visualizer/: Cargo.toml  README.md
haggling_visualizer/amethyst_precompile/: Cargo.toml
haggling_visualizer/amethyst_precompile/src/: lib.rs  render_graph.rs
haggling_visualizer/assets/prefab/: fly_camera.ron
haggling_visualizer/examples/ui/: main.rs
haggling_visualizer/examples/ui/assets/prefab/: fly_camera.ron
haggling_visualizer/examples/ui/config/: display.ron
haggling_visualizer/pkl_to_json/: README.md  format.md  pkl_to_json.py
haggling_visualizer/src/: haggling_session.rs  main.rs
meta/: Architecture  MVAE-sweeps.yaml  Untitled Diagram.drawio  bad_files.json  bodyAE-sweeps.yaml  bodymotion-sweeps.yaml  bodymotion-sweeps.yaml.py  jobscript.slurm  lstmAE-sweeps.yaml  mean.json  mtvae-conv-sweeps.yaml  requirements.txt  sell-it.yaml  std.json  sweeps.yaml
vis/: Cargo.toml  README.md  example.npy  vis.py
vis/src/: main.rs  skeleton_video.rs
vis/src/game/: base_plugins.rs  camera_plugin.rs  ground_plugin.rs  mod.rs  pause_plugin.rs  skeleton_videos_plugin.rs  status_bar_plugin.rs
(+25 files in other folders)
