[package]
name = "haggling_visualizer"
version = "0.1.0"
authors = ["Yashasvi Sriram Patkuri <yash.3997@gmail.com>"]
edition = "2018"

[dependencies.amethyst]
version = "0.15.3"
features = ["vulkan"]
default-features = false

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
amethyst_precompile = { path = "amethyst_precompile" }
